--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,18 @@ jobs:
 
     strategy:
       matrix:
-          php: ["8.0", "8.1"]
-          symfony: ["^5.4", "^6.0"]
+          php: ["7.4", "8.0", "8.1"]
+          symfony: ["^4.4", "^5.4", "^6.0"]
+          exclude:
+            -
+              php: "8.1"
+              symfony: "^6.0"
+            -
+              php: "7.4"
+              symfony: "^5.4"
+            -
+              php: "7.4"
+              symfony: "^6.0"
 
     steps:
 
