--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php":                          "^8.0",
+        "php":                          "^7.4 || ^8.0",
         "symfony/dependency-injection": "^4.3 || ^5.0 || ^6.0",
         "mockery/mockery":              "^1.3"
     },
